# database-parsers

./: pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-actions.yaml
databaseparsers/: __init__.py
databaseparsers/openkim/: metadata.yaml  nomad_plugin.yaml  parser.py
databaseparsers/openkim/metainfo/: openkim.py
tests/: test_openkimparser.py
