[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'databaseparsers'
version = '1.0'
description = 'Collection of NOMAD parsers for databases.'
readme = "README.md"
authors = [{ name = "The NOMAD Authors" }]
license = { file = "LICENSE" }
# dependencies = [
#     "nomad-lab[infrastrucutre]",
# ]

[project.urls]
homepage = "https://github.com/nomad-coe/database-parsers"

[project.optional-dependencies]
tests = [
    'mypy==0.730',
    'pylint==2.3.1',
    'pylint_plugin_utils==0.5',
    'pycodestyle',
    'pytest==3.10.0',
    'pytest-timeout',
    'pytest-cov==2.7.1',
]

[tool.setuptools.packages.find]
include = [
    "databaseparsers*",
]

[tool.setuptools.package-data]
databaseparsers = ['*/metadata.yaml', '*/README.md']
